--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ttl"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2024"
 description = "Modern traceroute/mtr-style TUI with hop stats and optional ASN/geo enrichment"
 license = "MIT OR Apache-2.0"
@@ -44,6 +44,9 @@ thiserror = "1"
 
 # Better locks
 parking_lot = "0.12"
+
+# Config directories
+dirs = "5.0"
 
 [dev-dependencies]
 tokio-test = "0.4"
