Fix macOS Sequoia compatibility with MACOSX_DEPLOYMENT_TARGET (v0.11.3)
Set MACOSX_DEPLOYMENT_TARGET=15.0 when building on macos-latest to ensure
binary compatibility with macOS Sequoia (15) users.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,6 +49,7 @@ jobs:
           - target: aarch64-apple-darwin
             os: macos-latest
             cross: false
+            macos_deployment_target: "15.0"
 
     steps:
       - uses: actions/checkout@v4
@@ -74,6 +75,8 @@ jobs:
 
       - name: Build (native)
         if: ${{ !matrix.cross }}
+        env:
+          MACOSX_DEPLOYMENT_TARGET: ${{ matrix.macos_deployment_target || '' }}
         run: cargo build --release --target ${{ matrix.target }}
 
       - name: Build (cross)
