--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,8 +37,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          # Linux x86_64
-          - target: x86_64-unknown-linux-gnu
+          # Linux x86_64 (static musl for glibc compatibility)
+          - target: x86_64-unknown-linux-musl
             os: ubuntu-latest
             cross: false
           # Linux aarch64
@@ -72,6 +72,10 @@ jobs:
       - name: Install cross
         if: matrix.cross
         run: cargo install cross --version 0.2.5
+
+      - name: Install musl-tools
+        if: contains(matrix.target, 'musl')
+        run: sudo apt-get update && sudo apt-get install -y musl-tools
 
       - name: Build (native)
         if: ${{ !matrix.cross }}
