Fix FreeBSD build: make getifs conditional
- getifs uses macOS-specific APIs (NET_RT_IFLIST2, rt_msghdr) that
  don't exist in FreeBSD's libc bindings
- Make getifs a target-specific dependency (Linux + macOS only)
- Gateway detection returns None on FreeBSD (non-critical feature)
- Add FreeBSD 14.2 CI job via vmactions/freebsd-vm

Fixes #14

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,3 +49,21 @@ jobs:
 
       - name: Run tests
         run: cargo test --verbose
+
+  build-freebsd:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Build on FreeBSD
+        uses: vmactions/freebsd-vm@v1
+        with:
+          release: "14.2"
+          usesh: true
+          prepare: |
+            pkg install -y curl
+            curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+          run: |
+            . $HOME/.cargo/env
+            cargo build --verbose
+            cargo test --verbose
